using System;
using System.Collections.Generic;
using System.Text;

namespace UCLARound3
{
    public interface IConsole
    {
        void WriteLine();
        void WriteLine(string value);
    }
}
